# netdata-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
netdata_cli/: __init__.py  cli.py  client.py  formatters.py  mcp_client.py
skills/: SKILL.md
tests/: __init__.py  test_client.py
